--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.RegistreComMobile"
         tools:targetApi="31">
         <activity
+            android:name=".FAQActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OtherResourcesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdviceActivity"
+            android:exported="false" />
+        <activity
             android:name=".ClientSupportActivity"
             android:exported="false" />
         <activity
