--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RegistreComMobile"
         tools:targetApi="31">
-        <activity
-            android:name=".RequestListActivity"
-            android:exported="false" />
+
         <activity
             android:name=".FAQActivity"
             android:exported="false" />
